# aktualizr

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt
docker/: Dockerfile.debian.testing  Dockerfile.ubuntu.bionic  Dockerfile.ubuntu.xenial
docs/doxygen/: Doxyfile.in
src/: CMakeLists.txt
src/aktualizr_info/: main.cc
src/aktualizr_primary/: main.cc
src/aktualizr_secondary/: CMakeLists.txt  aktualizr_secondary.cc  aktualizr_secondary.h  aktualizr_secondary_factory.cc  aktualizr_secondary_ostree_test.cc  aktualizr_secondary_test.cc  handlermap.cc  handlermap.h  main.cc  secondary_tcp_server.cc  secondary_tcp_server.h  secondary_tcp_server_test.cc  update_agent_file.cc  update_agent_file.h  update_agent_ostree.cc  uptane_verification_test.cc
src/cert_provider/: CMakeLists.txt
src/isotp_secondary/: CMakeLists.txt  isotpsecondary.h
src/libaktualizr/: CMakeLists.txt
src/libaktualizr-posix/: ipuptanesecondary.cc  ipuptanesecondary.h
src/libaktualizr/http/: CMakeLists.txt  httpclient.cc  httpclient.h  httpclient_test.cc  httpinterface.h
src/load_tests_rust/: Cargo.toml  build.rs  build.sh  check_updates.sh  provisioning.sh
src/sota_tools/: CMakeLists.txt  deploy.cc  garage_check.cc  garage_push.cc  ostree_http_repo.h  rate_controller.h  request_pool.cc
src/uptane_generator/: repo.cc  repo.h
src/virtual_secondary/: managedsecondary.cc  managedsecondary.h  partialverificationsecondary.cc  (+1 more)
tests/: CMakeLists.txt  environment_setup.cc  httpfake.h  ipsecondary_test.py  test_fixtures.py  test_update.py  uptane_vector_tests.cc
(+56 files in other folders)
